--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -41,7 +41,7 @@ body:
     attributes:
       label: Reproduction
       description: To help us, please provide a [stackblitz](https://stackblitz.com/) or [replay.io](https://docs.replay.io/docs/recording-bug-reports-80c37d7d6753485f81497570625d06f0) link showing your bug. _A [minimal reproduction](https://stackoverflow.com/help/minimal-reproducible-example) is a nice option to get your bug fixed asap ([Why?](https://antfu.me/posts/why-reproductions-are-required))._
-      placeholder: Reproduction link 🙏
+      placeholder: 🔗 Reproduction link
 
   - type: textarea
     id: system-info
