--- a/shared-config/renovate.json
+++ b/shared-config/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", ":preserveSemverRanges"],
+  "extends": ["config:base"],
+  "rangeStrategy": "replace",
   "automerge": false,
   "dependencyDashboardTitle": "📦 Dependency Dashboard",
   "baseBranches": ["main"],
@@ -19,19 +20,19 @@
       "prPriority": -1
     },
     {
-      "groupName": "KitQL",
+      "groupName": "JYC_KitQL",
       "matchPackagePrefixes": "@kitql"
     },
     {
-      "groupName": "houdini",
+      "groupName": "JYC_Houdini",
       "matchPackagePrefixes": "houdini"
     },
     {
-      "groupName": "svelte",
+      "groupName": "JYC_sSvelte",
       "matchPackagePrefixes": ["@sveltejs", "svelte-check", "svelte"]
     },
     {
-      "groupName": "tailwind",
+      "groupName": "JYC_Tailwind",
       "matchPackagePrefixes": [
         "@tailwindcss",
         "tailwindcss",
@@ -39,11 +40,19 @@
       ]
     },
     {
-      "groupName": "envelop",
+      "groupName": "JYC_Envelop",
       "matchPackagePrefixes": "@envelop"
     },
     {
-      "groupName": "icon",
+      "groupName": "JYC_prettier",
+      "matchPackagePrefixes": [
+        "prettier",
+        "prettier-plugin-svelte",
+        "@trivago/prettier-plugin-sort-imports"
+      ]
+    },
+    {
+      "groupName": "JYC_Icon",
       "matchPackagePrefixes": ["unplugin-icons", "@iconify/json"]
     }
   ]
