:tada: NEW: gh action setup (format 004)

--- a/shared-config/setup/action.yml
+++ b/shared-config/setup/action.yml
@@ -35,6 +35,7 @@ runs:
         run_install: false
 
     - name: Get pnpm store directory
+      shell: bash
       run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
     - uses: actions/cache@v3
@@ -46,4 +47,5 @@ runs:
           ${{ runner.os }}-pnpm-store-
 
     - name: Install dependencies
+      shell: bash
       run: pnpm install --frozen-lockfile
