--- a/shared-config/setup/action.yml
+++ b/shared-config/setup/action.yml
@@ -16,6 +16,7 @@ inputs:
     required: false
     default: 8.7.1
 runs:
+  using: composite
   steps:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.11.0
