add vitest group

--- a/shared-config/renovate.json
+++ b/shared-config/renovate.json
@@ -58,6 +58,10 @@
     {
       "groupName": "Icon",
       "matchPackagePrefixes": ["unplugin-icons", "@iconify/json"]
+    },
+    {
+      "groupName": "vitest",
+      "matchPackagePrefixes": ["vitest", "@vitest"]
     }
   ]
 }
