:tada: UPDATE: renovate settings to split KitQL packages

--- a/shared-config/renovate.json
+++ b/shared-config/renovate.json
@@ -12,15 +12,11 @@
     {
       "matchUpdateTypes": ["patch"],
       "enabled": false,
-      "excludePackagePrefixes": ["houdini", "@kitql"]
+      "excludePackagePrefixes": ["houdini", "@kitql", "vite"]
     },
     {
       "matchDepTypes": ["devDependencies"],
       "prPriority": -1
-    },
-    {
-      "groupName": "KitQL",
-      "matchPackagePrefixes": "@kitql"
     },
     {
       "groupName": "Houdini",
