--- a/shared-config/renovate.json
+++ b/shared-config/renovate.json
@@ -57,7 +57,7 @@
       "matchPackagePrefixes": ["unplugin-icons", "@iconify/json"]
     },
     {
-      "groupName": "vitest",
+      "groupName": "Vitest",
       "matchPackagePrefixes": ["vitest", "@vitest"]
     }
   ]
