--- a/shared-config/setup/action.yml
+++ b/shared-config/setup/action.yml
@@ -15,6 +15,10 @@ inputs:
     description: Version of pnpm to use
     required: false
     default: 8.10.5
+  withCaching:
+    description: With Caching
+    required: false
+    default: true
 runs:
   using: composite
   steps:
@@ -36,10 +40,12 @@ runs:
         run_install: false
 
     - name: Get pnpm store directory
+      if: inputs.withCaching == true
       shell: bash
       run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
     - uses: actions/cache@v4
+      if: inputs.withCaching == true
       name: Setup pnpm cache
       with:
         path: ${{ env.STORE_PATH }}
