--- a/shared-config/renovate/default.json5
+++ b/shared-config/renovate/default.json5
@@ -41,7 +41,7 @@
     },
     {
       "groupName": "Svelte",
-      "matchPackagePrefixes": ["@sveltejs", "svelte-check", "svelte"]
+      "matchPackagePrefixes": ["@sveltejs"]
     },
     {
       "groupName": "Tailwind",
