--- a/shared-config/renovate/default.json5
+++ b/shared-config/renovate/default.json5
@@ -18,6 +18,8 @@
   "timezone": "Europe/Paris",
   "schedule": ["after 10pm and before 6:00am"],
 
+  "rebaseWhen": "behind-base-branch",
+
   "packageRules": [
     // Let's update each patch for these libs
     {
