--- a/shared-config/renovate/default.json5
+++ b/shared-config/renovate/default.json5
@@ -27,12 +27,12 @@
       "enabled": false,
       "excludePackagePrefixes": ["houdini", "@kitql", "remult"]
     },
-    // Don't update these
+    // Don't update these at minor level...
     {
       "matchUpdateTypes": ["minor"],
       "matchPackageNames": ["@aws-sdk/**", "posthog-js"],
       "enabled": false
-    }
+    },
     // devDependencies will be prioritized last
     {
       "matchDepTypes": ["devDependencies"],
