--- a/shared-config/setup/action.yml
+++ b/shared-config/setup/action.yml
@@ -23,6 +23,10 @@ inputs:
     description: frozen-lockfile / no-frozen-lockfile
     required: false
     default: true
+  skipInstallIfCacheFound:
+    description: Skip installing dependencies if the cache is found
+    required: false
+    default: false
 runs:
   using: composite
   steps:
@@ -43,6 +47,9 @@ runs:
         version: ${{ inputs.pnpmVersion }}
         run_install: false
 
+    - name: Initialize cache hit
+      run: echo "CACHE_HIT=false" >> $GITHUB_ENV
+
     - name: Get pnpm store directory
       if: inputs.withCaching == 'true'
       shell: bash
@@ -51,18 +58,23 @@ runs:
     - uses: actions/cache@v4
       if: inputs.withCaching == 'true'
       name: Setup pnpm cache
+      id: pnpm-cache
       with:
         path: ${{ env.STORE_PATH }}
         key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
 
-    - name: Install dependencies
-      if: inputs.frozenMode == 'true'
+    - name: Set cache hit variable
+      if: inputs.withCaching == 'true'
+      run: echo "CACHE_HIT=${{ steps.pnpm-cache.outputs.cache-hit }}" >> $GITHUB_ENV
+
+    - name: Install dependencies (frozen-lockfile)
+      if: inputs.frozenMode == 'true' && (inputs.skipInstallIfCacheFound != 'true' || env.CACHE_HIT == 'false')
       shell: bash
       run: pnpm install --frozen-lockfile
 
-    - name: Install dependencies
-      if: inputs.frozenMode == 'false'
+    - name: Install dependencies (no-frozen-lockfile)
+      if: inputs.frozenMode == 'false' && (inputs.skipInstallIfCacheFound != 'true' || env.CACHE_HIT == 'false')
       shell: bash
       run: pnpm install --no-frozen-lockfile
