--- a/shared-config/setup/action.yml
+++ b/shared-config/setup/action.yml
@@ -48,6 +48,7 @@ runs:
         run_install: false
 
     - name: Initialize cache hit
+      shell: bash
       run: echo "CACHE_HIT=false" >> $GITHUB_ENV
 
     - name: Get pnpm store directory
@@ -67,6 +68,7 @@ runs:
 
     - name: Set cache hit variable
       if: inputs.withCaching == 'true'
+      shell: bash
       run: echo "CACHE_HIT=${{ steps.pnpm-cache.outputs.cache-hit }}" >> $GITHUB_ENV
 
     - name: Install dependencies (frozen-lockfile)
