remove svelte grouping

--- a/shared-config/renovate/default.json5
+++ b/shared-config/renovate/default.json5
@@ -46,10 +46,10 @@
     {
       "groupName": "Houdini",
       "matchPackageNames": "houdini**"
-    },
-    {
-      "groupName": "Svelte",
-      "matchPackageNames": ["@sveltejs/**", "svelte"]
     }
+    // {
+    //   "groupName": "Svelte",
+    //   "matchPackageNames": ["@sveltejs/**", "svelte"]
+    // }
   ]
 }
